fixed minor text overlapping bug

--- a/client/src/views/Webshop/WebshopFrontPage/WebshopFrontpage.css
+++ b/client/src/views/Webshop/WebshopFrontPage/WebshopFrontpage.css
@@ -55,7 +55,7 @@
   justify-content: space-between;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 5;
   width: 100%;
   display: flex;
   padding: 15px;
